2016-11-04  Oliver Kiddle  <opk@zsh.org>

	* 39834: Src/builtin.c, Completion/Zsh/Command/_print,
	Completion/Zsh/Command/_fc, Completion/Zsh/Type/_ps1234:
	when print used with -v and -l, include a final
	newline; complete print -S option and make further use
	of the new printf to an array feature

	* 39389: Src/builtin.c, Test/B03print.ztst, Doc/Zsh/builtins.yo,
	Completion/Zsh/Type/_globquals, Completion/Zsh/Command/_print:
	when printf -v is used with an array use separate elements each
	time the format is reused

2016-11-04  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* users/22080: Doc/Zsh/zle.yo: bracketed-paste: Third time's
	a charm.

2016-11-04  Peter Stephenson  <p.stephenson@samsung.com>

	* Sebastian: 39825: Src/utils.c: Optimise mb_metastrlenend() for
	the common case of 7-bit character.

2016-11-04  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 39818 (Oliver Kiddle): Completion/Unix/Command/_awk: add nawk

2016-11-03  Barton E. Schaefer  <schaefer@zsh.org>

	* 39824: Test/X02zlevi.ztst: test case for 39811

2016-11-03  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted: Src/Zle/zle_keymap.c: comment explaining putting
	back tail end of key buffer into input.

2016-11-03  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 39806: Src/Zle/zle_vi.c: internal: Document zle's vichgbuf.

	* 39805: Src/Zle/comp.h, Src/Zle/compcore.c: internal: Document
	some compadd internals.

	* 39804: Src/Zle/comp.h, Src/Zle/complete.c: internal: Document
	matchspec flags.

	* 39803: Src/Zle/complete.c: internal: Document bin_compadd().

	* 39802: Src/Zle/compcore.c, Src/Zle/complete.c: internal:
	Document and simplify multiquote().

	* users/22063: Doc/Zsh/zle.yo: bracketed-paste: Document ability
	to specify a vi register. (after users/22036)

2016-11-03  Daniel Hahler  <zsh@thequod.de>

	* 39822: Completion/Unix/Command/_git: remove "-A '-*'" with
	_arguments for some commands.

2016-11-03  Barton E. Schaefer  <schaefer@zsh.org>
